ansible/web-config/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minipj-app
  labels:
    app: minipj-app
  namespace: miniproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minipj-app
  template:
    metadata:
      labels:
        app: minipj-app
      namespace: miniproject
    spec:
      containers:
        - name: linksweb
          image: registry.digitalocean.com/miniproject/appimg
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: miniproject
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
    service.beta.kubernetes.io/do-loadbalancer-disable-lets-encrypt-dns-records: "false"
spec:
  type: LoadBalancer
  ClusterIP: 10.245.109.42
  selector:
    app: minipj-app
  ports:
    - name: tcp
      protocol: TCP
      port: 80
      targetPort: 4000
