ansible/web-config/mysql.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: miniproject
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      namespace: miniproject
      labels:
        app: mysql
    spec:
      volumes:
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: mysql-pv-claim
        - name: mysql-initdb
          configMap:
            name: mysql-initdb
      containers:
        - name: linksdb
          image: mysql:latest
          ports:
            - name: tcp
              protocol: TCP
              containerPort: 3306
          args:
            [
              "--default-authentication-plugin=mysql_native_password",
              "--character-set-server=utf8mb4",
              "--collation-server=utf8mb4_general_ci",
            ]
          volumeMounts:
            - name: mysql-pvc
              mountPath: /var/lib/mysql
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d

---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: mysql
  namespace: miniproject
spec:
  selector:
    app: mysql
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
      targetPort: 3306
