ansible/web-config/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minipj-ingress
  namespace: miniproject
spec:
  rules:
    - host: minipj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  name: http
